--- a/facetime.html
+++ b/facetime.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       width: 390px;
-      height: 720px; /* ✅ 주소창 고려해서 줄임 */
+      height: 720px; /* 주소창 고려하여 높이 조정 */
       overflow: hidden;
       font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;
       position: relative;
@@ -54,7 +54,7 @@
     .icon-button-row {
       display: flex;
       justify-content: space-around;
-      margin-top: 390px;
+      margin-top: 350px;
     }
 
     .icon-group {
@@ -67,7 +67,6 @@
     .icon-group svg {
       width: 28px;
       height: 28px;
-      fill: white;
     }
 
     .icon-group span {
@@ -93,7 +92,6 @@
       border-radius: 50%;
       object-fit: cover;
       object-position: center;
-      box-shadow: 0 0 0 2px white;
     }
 
     .end-accept {
@@ -111,22 +109,26 @@
     </div>
 
     <!-- Remind Me & Message -->
-    <div class="icon-button-row">
-      <div class="icon-group">
-        <!-- iOS-style bell icon for Remind Me -->
-        <svg viewBox="0 0 24 24">
-          <path d="M12 22c1.1 0 2-.9 2-2h-4a2 2 0 0 0 2 2zm6-6V11c0-3.07-1.63-5.64-4.5-6.32V4a1.5 1.5 0 0 0-3 0v.68C7.63 5.36 6 7.92 6 11v5l-1.29 1.29a1 1 0 0 0 .71 1.71h12.17a1 1 0 0 0 .71-1.71L18 16z"/>
-        </svg>
-        <span>Remind Me</span>
-      </div>
-      <div class="icon-group">
-        <!-- iOS-style message bubble icon -->
-        <svg viewBox="0 0 24 24">
-          <path d="M20 2H4a2 2 0 0 0-2 2v14l4-4h14a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z"/>
-        </svg>
-        <span>Message</span>
-      </div>
+<div class="icon-button-row">
+  <div class="icon-group">
+    <div class="icon-circle">
+      <!-- 알람 아이콘 -->
+      <svg viewBox="0 0 24 24">
+        <path d="M12 4a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0-2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm-1 5h2v5h-2V7zm0 6h2v2h-2v-2z"/>
+      </svg>
     </div>
+    <span>Remind Me</span>
+  </div>
+  <div class="icon-group">
+    <div class="icon-circle">
+      <!-- 메시지 아이콘 -->
+      <svg viewBox="0 0 24 24">
+        <path d="M2 3h20v14H6l-4 4V3z" />
+      </svg>
+    </div>
+    <span>Message</span>
+  </div>
+</div>
 
     <!-- Decline & Accept -->
     <div class="action-button-row">
@@ -136,7 +138,7 @@
       </div>
       <div class="action-group">
         <img src="images/ac.PNG" alt="Accept" />
-        <div class="end-accept">End & Accept</div>
+        <div class="end-accept">Accept</div>
       </div>
     </div>
   </div>
