--- a/facetime.html
+++ b/facetime.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       width: 390px;
-      height: 720px; /* 주소창 고려하여 높이 조정 */
+      height: 705px; /* ✅ Safari 대비 살짝 줄임 */
       overflow: hidden;
       font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;
       position: relative;
@@ -54,7 +54,7 @@
     .icon-button-row {
       display: flex;
       justify-content: space-around;
-      margin-top: 350px;
+      margin-top: 390px;
     }
 
     .icon-group {
@@ -67,6 +67,7 @@
     .icon-group svg {
       width: 28px;
       height: 28px;
+      fill: white;
     }
 
     .icon-group span {
@@ -92,6 +93,7 @@
       border-radius: 50%;
       object-fit: cover;
       object-position: center;
+      box-shadow: 0 0 0 2px white;
     }
 
     .end-accept {
@@ -104,33 +106,30 @@
 
   <div class="overlay">
     <div class="caller-info">
-      <h1>신정환</h1>
+      <h1>Mom</h1>
       <p>FaceTime Video</p>
     </div>
 
     <!-- Remind Me & Message -->
-<div class="icon-button-row">
-  <div class="icon-group">
-    <div class="icon-circle">
-      <!-- 알람 아이콘 -->
-      <svg viewBox="0 0 24 24">
-        <path d="M12 4a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0-2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm-1 5h2v5h-2V7zm0 6h2v2h-2v-2z"/>
-      </svg>
+    <div class="icon-button-row">
+      <div class="icon-group">
+        <!-- iOS-style alarm clock icon (closer to actual Remind Me) -->
+        <svg viewBox="0 0 24 24">
+          <path d="M12 4a8 8 0 1 1 0 16 8 8 0 0 1 0-16zm0-2C6.48 2 2 6.48 2 12s4.48 10 10 10
+          10-4.48 10-10S17.52 2 12 2zm-.5 5h1v6l5.25 3.15-.5.85L11.5 13V7z"/>
+        </svg>
+        <span>Remind Me</span>
+      </div>
+      <div class="icon-group">
+        <!-- iOS-style message bubble icon (closer to actual Message) -->
+        <svg viewBox="0 0 24 24">
+          <path d="M4 4h16v12H5.17L4 17.17V4zm0-2a2 2 0 0 0-2 2v18l4-4h14a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4z"/>
+        </svg>
+        <span>Message</span>
+      </div>
     </div>
-    <span>Remind Me</span>
-  </div>
-  <div class="icon-group">
-    <div class="icon-circle">
-      <!-- 메시지 아이콘 -->
-      <svg viewBox="0 0 24 24">
-        <path d="M2 3h20v14H6l-4 4V3z" />
-      </svg>
-    </div>
-    <span>Message</span>
-  </div>
-</div>
 
-    <!-- Decline & Accept -->
+    <!-- Decline & Accept (❗절대 수정하지 않음) -->
     <div class="action-button-row">
       <div class="action-group">
         <img src="images/de.PNG" alt="Decline" />
@@ -138,7 +137,7 @@
       </div>
       <div class="action-group">
         <img src="images/ac.PNG" alt="Accept" />
-        <div class="end-accept">Accept</div>
+        <div class="end-accept">End & Accept</div>
       </div>
     </div>
   </div>
