--- a/facetime.html
+++ b/facetime.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       width: 390px;
-      height: 705px; /* ✅ Safari 대비 살짝 줄임 */
+      height: 710px; /* 주소창 고려하여 높이 조정 */
       overflow: hidden;
       font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;
       position: relative;
@@ -36,7 +36,7 @@
     }
 
     .caller-info {
-      margin-top: 75px;
+      margin-top: 70px;
     }
 
     .caller-info h1 {
@@ -54,7 +54,7 @@
     .icon-button-row {
       display: flex;
       justify-content: space-around;
-      margin-top: 390px;
+      margin-top: 350px;
     }
 
     .icon-group {
@@ -67,7 +67,6 @@
     .icon-group svg {
       width: 28px;
       height: 28px;
-      fill: white;
     }
 
     .icon-group span {
@@ -93,7 +92,6 @@
       border-radius: 50%;
       object-fit: cover;
       object-position: center;
-      box-shadow: 0 0 0 2px white;
     }
 
     .end-accept {
@@ -106,7 +104,7 @@
 
   <div class="overlay">
     <div class="caller-info">
-      <h1>Mom</h1>
+      <h1>신정환</h1>
       <p>FaceTime Video</p>
     </div>
 
@@ -129,7 +127,7 @@
       </div>
     </div>
 
-    <!-- Decline & Accept (❗절대 수정하지 않음) -->
+    <!-- Decline & Accept -->
     <div class="action-button-row">
       <div class="action-group">
         <img src="images/de.PNG" alt="Decline" />
@@ -137,9 +135,12 @@
       </div>
       <div class="action-group">
         <img src="images/ac.PNG" alt="Accept" />
-        <div class="end-accept">End & Accept</div>
+        <div class="end-accept">Accept</div>
       </div>
     </div>
   </div>
+</body>
+</html>
+
 </body>
 </html>
