--- a/facetime.html
+++ b/facetime.html
@@ -36,7 +36,7 @@
     }
 
     .caller-info {
-      margin-top: 70px;
+      margin-top: 75px;
     }
 
     .caller-info h1 {
@@ -67,6 +67,7 @@
     .icon-group svg {
       width: 28px;
       height: 28px;
+      fill: white;
     }
 
     .icon-group span {
@@ -111,17 +112,16 @@
     <!-- Remind Me & Message -->
     <div class="icon-button-row">
       <div class="icon-group">
-        <!-- iOS-style alarm clock icon (closer to actual Remind Me) -->
+        <!-- iOS-style alarm clock icon (custom drawn) -->
         <svg viewBox="0 0 24 24">
-          <path d="M12 4a8 8 0 1 1 0 16 8 8 0 0 1 0-16zm0-2C6.48 2 2 6.48 2 12s4.48 10 10 10
-          10-4.48 10-10S17.52 2 12 2zm-.5 5h1v6l5.25 3.15-.5.85L11.5 13V7z"/>
+          <path d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17zm-.75 4.5h1.5v5.25l4.5 2.6-.75 1.3-5.25-3.05V8zM6.1 4.1 4.7 2.7l2.1-2.1L8.2 2zM17.9 4.1 15.8 2l1.4-1.4 2.1 2.1z"/>
         </svg>
         <span>Remind Me</span>
       </div>
       <div class="icon-group">
-        <!-- iOS-style message bubble icon (closer to actual Message) -->
+        <!-- iOS-style message icon (custom drawn, filled) -->
         <svg viewBox="0 0 24 24">
-          <path d="M4 4h16v12H5.17L4 17.17V4zm0-2a2 2 0 0 0-2 2v18l4-4h14a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H4z"/>
+          <path d="M4 2h16a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-5l-5 4v-4H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z" />
         </svg>
         <span>Message</span>
       </div>
@@ -139,8 +139,5 @@
       </div>
     </div>
   </div>
-</body>
-</html>
-
 </body>
 </html>
