--- a/facetime.html
+++ b/facetime.html
@@ -36,7 +36,7 @@
     }
 
     .caller-info {
-      margin-top: 75px;
+      margin-top: 72px;
     }
 
     .caller-info h1 {
@@ -121,7 +121,7 @@
       <div class="icon-group">
         <!-- iOS-style message icon (custom drawn, filled) -->
         <svg viewBox="0 0 24 24">
-          <path d="M4 2h16a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-5l-5 4v-4H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z" />
+          <path d="M20 2H4a2 2 0 0 0-2 2v18l4-4h14a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z" fill="white"/>
         </svg>
         <span>Message</span>
       </div>
