--- a/facetime.html
+++ b/facetime.html
@@ -114,8 +114,14 @@
       <div class="icon-group">
         <!-- iOS-style alarm clock icon (custom drawn) -->
         <svg viewBox="0 0 24 24">
-          <path d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17zm-.75 4.5h1.5v5.25l4.5 2.6-.75 1.3-5.25-3.05V8zM6.1 4.1 4.7 2.7l2.1-2.1L8.2 2zM17.9 4.1 15.8 2l1.4-1.4 2.1 2.1z"/>
-        </svg>
+  <path fill="white" d="
+    M12 2a10 10 0 1 1 0 20a10 10 0 0 1 0-20z              <!-- 바깥 원 -->
+    M12 3.5a8.5 8.5 0 1 0 0 17a8.5 8.5 0 0 0 0-17z         <!-- 안쪽 원 -->
+    M11.25 8.5h1.5v5.25l4.5 2.6l-0.75 1.3l-5.25-3.05V8.5z  <!-- 시곗바늘 -->
+    M7 4.2a1.6 1.6 0 1 1 0 0.01z                           <!-- 왼쪽 종 -->
+    M17 4.2a1.6 1.6 0 1 1 0 0.01z                          <!-- 오른쪽 종 -->
+  "/>
+</svg>
         <span>Remind Me</span>
       </div>
       <div class="icon-group">
