--- a/facetime.html
+++ b/facetime.html
@@ -113,13 +113,25 @@
     <div class="icon-button-row">
       <div class="icon-group">
         <!-- iOS-style alarm clock icon (custom drawn) -->
-        <svg viewBox="0 0 24 24">
+        <<svg viewBox="0 0 24 24">
   <path fill="white" d="
-    M12 2a10 10 0 1 1 0 20a10 10 0 0 1 0-20z              <!-- 바깥 원 -->
-    M12 3.5a8.5 8.5 0 1 0 0 17a8.5 8.5 0 0 0 0-17z         <!-- 안쪽 원 -->
-    M11.25 8.5h1.5v5.25l4.5 2.6l-0.75 1.3l-5.25-3.05V8.5z  <!-- 시곗바늘 -->
-    M7 4.2a1.6 1.6 0 1 1 0 0.01z                           <!-- 왼쪽 종 -->
-    M17 4.2a1.6 1.6 0 1 1 0 0.01z                          <!-- 오른쪽 종 -->
+    M12 3.5
+    m -8.5,0
+    a 8.5,8.5 0 1,0 17,0
+    a 8.5,8.5 0 1,0 -17,0        <!-- 시계 원형 -->
+
+    M11.25 8.5h1.5v5.25l4.5 2.6
+    -.75 1.3-5.25-3.05V8.5z       <!-- 시곗바늘 -->
+
+    M7,4.2
+    m -1.6,0
+    a 1.6,1.6 0 1,0 3.2,0
+    a 1.6,1.6 0 1,0 -3.2,0        <!-- 왼쪽 종 -->
+
+    M17,4.2
+    m -1.6,0
+    a 1.6,1.6 0 1,0 3.2,0
+    a 1.6,1.6 0 1,0 -3.2,0        <!-- 오른쪽 종 -->
   "/>
 </svg>
         <span>Remind Me</span>
