--- a/facetime.html
+++ b/facetime.html
@@ -113,27 +113,12 @@
     <div class="icon-button-row">
       <div class="icon-group">
         <!-- iOS-style alarm clock icon (custom drawn) -->
-        <<svg viewBox="0 0 24 24">
-  <path fill="white" d="
-    M12 3.5
-    m -8.5,0
-    a 8.5,8.5 0 1,0 17,0
-    a 8.5,8.5 0 1,0 -17,0        <!-- 시계 원형 -->
-
-    M11.25 8.5h1.5v5.25l4.5 2.6
-    -.75 1.3-5.25-3.05V8.5z       <!-- 시곗바늘 -->
-
-    M7,4.2
-    m -1.6,0
-    a 1.6,1.6 0 1,0 3.2,0
-    a 1.6,1.6 0 1,0 -3.2,0        <!-- 왼쪽 종 -->
-
-    M17,4.2
-    m -1.6,0
-    a 1.6,1.6 0 1,0 3.2,0
-    a 1.6,1.6 0 1,0 -3.2,0        <!-- 오른쪽 종 -->
-  "/>
-</svg>
+        <svg viewBox="0 0 24 24" width="100" height="100">
+    <circle cx="12" cy="12" r="8.5" stroke="white" stroke-width="1.5" fill="none" />
+    <path d="M11.25 8.5h1.5v5.25l4.5 2.6-.75 1.3-5.25-3.05V8.5z" fill="white"/>
+    <circle cx="7" cy="4.2" r="1.7" fill="white" />
+    <circle cx="17" cy="4.2" r="1.7" fill="white" />
+  </svg>
         <span>Remind Me</span>
       </div>
       <div class="icon-group">
