--- a/facetime.html
+++ b/facetime.html
@@ -115,9 +115,9 @@
         <!-- iOS-style alarm clock icon (custom drawn) -->
         <svg viewBox="0 0 24 24" width="100" height="100">
     <circle cx="12" cy="12" r="8.5" stroke="white" stroke-width="1.5" fill="none" />
-    <path d="M11.25 8.5h1.5v5.25l4.5 2.6-.75 1.3-5.25-3.05V8.5z" fill="white"/>
-    <circle cx="7" cy="4.2" r="1.7" fill="white" />
-    <circle cx="17" cy="4.2" r="1.7" fill="white" />
+    <path d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17zm-.75 4.5h1.5v5.25l4.5 2.6-.75 1.3-5.25-3.05V8z" fill="white"/>
+    <circle cx="7" cy="4.2" r="1.6" fill="white" />
+    <circle cx="17" cy="4.2" r="1.6" fill="white" />
   </svg>
         <span>Remind Me</span>
       </div>
