--- a/facetime.html
+++ b/facetime.html
@@ -113,18 +113,15 @@
     <div class="icon-button-row">
       <div class="icon-group">
         <!-- iOS-style alarm clock icon (custom drawn) -->
-        <svg viewBox="0 0 24 24" width="100" height="100">
-    <circle cx="12" cy="12" r="8.5" stroke="white" stroke-width="1.5" fill="none" />
-    <path d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17zm-.75 4.5h1.5v5.25l4.5 2.6-.75 1.3-5.25-3.05V8z" fill="white"/>
-    <circle cx="7" cy="4.2" r="1.6" fill="white" />
-    <circle cx="17" cy="4.2" r="1.6" fill="white" />
-  </svg>
+        <svg viewBox="0 0 24 24">
+          <path d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17zm-.75 4.5h1.5v5.25l4.5 2.6-.75 1.3-5.25-3.05V8z"/>
+        </svg>
         <span>Remind Me</span>
       </div>
       <div class="icon-group">
         <!-- iOS-style message icon (custom drawn, filled) -->
         <svg viewBox="0 0 24 24">
-          <path d="M20 2H4a2 2 0 0 0-2 2v18l4-4h14a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z" fill="white"/>
+          <path d="M4 2h16a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-5l-5 4v-4H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z" />
         </svg>
         <span>Message</span>
       </div>
