--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=390, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
   <title>iMessage UI</title>
   <style>
     * {
@@ -11,7 +12,7 @@
     }
 
     body {
-      background-color: #f0f0f0;
+      background-color: #000;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -20,22 +21,22 @@
     }
 
     .container {
-      width: 840px;
-      height: 710px;
+      width: 390px;
+      height: 740px; /* 주소창 고려해서 줄임 */
       background-color: white;
-      border-radius: 30px;
       overflow: hidden;
       display: flex;
       flex-direction: column;
+      border-radius: 0;
     }
 
     .messages {
       flex: 1;
-      padding: 20px;
+      padding: 12px 14px;
       overflow-y: auto;
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 10px;
     }
 
     .message-wrapper {
@@ -46,16 +47,16 @@
     .message {
       background-color: #007aff;
       color: white;
-      padding: 12px 18px;
-      max-width: 60%;
-      font-size: 16px;
+      padding: 10px 14px;
+      max-width: 80%;
+      font-size: 15px;
       animation: messageSend 0.3s ease forwards;
       opacity: 0;
 
-      border-top-left-radius: 20px;
-      border-top-right-radius: 20px;
-      border-bottom-left-radius: 20px;
-      border-bottom-right-radius: 6px; /* ← 여기를 직각 느낌으로 */
+      border-top-left-radius: 18px;
+      border-top-right-radius: 18px;
+      border-bottom-left-radius: 18px;
+      border-bottom-right-radius: 6px;
     }
 
     @keyframes messageSend {
@@ -71,33 +72,38 @@
 
     .input-area {
       display: flex;
-      padding: 10px 15px;
+      padding: 8px 10px;
       border-top: 1px solid #ddd;
       background-color: #f9f9f9;
     }
 
     .input-area input {
       flex: 1;
-      padding: 12px 16px;
+      padding: 10px 14px;
       border-radius: 20px;
-      border: 1px solid #e0e0e0; /* 연한 회색 테두리 */
-      font-size: 16px;
+      border: 1px solid #e0e0e0;
+      font-size: 15px;
       outline: none;
     }
 
     .send-button {
-      margin-left: 10px;
+      margin-left: 8px;
       background-color: #007aff;
       color: white;
-      font-size: 20px;
-      width: 40px;
-      height: 40px;
+      font-size: 18px;
+      width: 36px;
+      height: 36px;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
       cursor: pointer;
       user-select: none;
+    }
+
+    /* 모바일 스크롤 부드럽게 */
+    .messages::-webkit-scrollbar {
+      display: none;
     }
   </style>
 </head>
@@ -139,3 +145,4 @@
 
 </body>
 </html>
+
