--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=390, user-scalable=no" />
+  <meta name="viewport" content="width=390, user-scalable=no, viewport-fit=cover" />
   <title>iMessage</title>
   <style>
     * {
@@ -24,7 +24,7 @@
 
     .container {
       width: 390px;
-      height: 710px; /* 고정 높이로 스크롤 제거 */
+      height: 844px; /* ✅ 고정 높이 수정 */
       background-color: white;
       display: flex;
       flex-direction: column;
@@ -75,6 +75,7 @@
       display: flex;
       align-items: center;
       padding: 8px 10px;
+      padding-bottom: calc(env(safe-area-inset-bottom) + 8px); /* ✅ 하단 주소창 대비 */
       border-top: 1px solid #ddd;
       background-color: #f9f9f9;
     }
@@ -164,3 +165,4 @@
   </script>
 </body>
 </html>
+
