--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     .iphone-frame {
       width: 390px;
-      height: 710px;
+      height: 690px;
       background-color: #f2f2f7;
       display: flex;
       flex-direction: column;
@@ -62,11 +62,11 @@
   <div class="iphone-frame">
     <div class="content">Hello</div>
     <div class="dock">
-      <img src="images/icon.phone.webp" alt="Phone" />
+      <img src="images/i1.webp" alt="Phone" />
       <a href="about.html">
-        <img src="images/icon.messages.webp" alt="Messages" />
+        <img src="images/i2.webp" alt="Messages" />
       </a>
-      <img src="images/icon.apple-music.webp" alt="Music" />
+      <img src="images/i3.webp" alt="Music" />
     </div>
   </div>
 </body>
