--- a/about.html
+++ b/about.html
@@ -43,7 +43,6 @@
 
     .message-wrapper {
       display: flex;
-      justify-content: flex-end;
     }
 
     .message {
@@ -58,6 +57,16 @@
       border-top-right-radius: 18px;
       border-bottom-left-radius: 18px;
       border-bottom-right-radius: 6px;
+    }
+
+    .incoming {
+      background-color: #e5e5ea;
+      color: black;
+      align-self: flex-start;
+      border-top-left-radius: 18px;
+      border-top-right-radius: 18px;
+      border-bottom-left-radius: 6px;
+      border-bottom-right-radius: 18px;
     }
 
     @keyframes messageSend {
@@ -122,6 +131,49 @@
     .messages::-webkit-scrollbar {
       display: none;
     }
+
+    /* Typing indicator */
+    .typing {
+      width: 50px;
+      height: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+    }
+
+    .dot {
+      width: 6px;
+      height: 6px;
+      background-color: #555;
+      border-radius: 50%;
+      animation: blink 1.4s infinite ease-in-out both;
+    }
+
+    .dot:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .dot:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+
+    @keyframes blink {
+      0%, 80%, 100% {
+        transform: scale(0.8);
+        opacity: 0.3;
+      }
+      40% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    .image-message {
+      width: 180px;
+      height: 180px;
+      border-radius: 18px;
+      object-fit: cover;
+    }
   </style>
 </head>
 <body>
@@ -138,29 +190,81 @@
   </div>
 
   <script>
+    const messages = document.getElementById('messages');
+
+    function appendMessage(text, isUser = false, isImage = false) {
+      const wrapper = document.createElement('div');
+      wrapper.className = 'message-wrapper';
+      wrapper.style.justifyContent = isUser ? 'flex-end' : 'flex-start';
+
+      const msg = document.createElement('div');
+      msg.className = 'message';
+      if (!isUser) msg.classList.add('incoming');
+
+      if (isImage) {
+        const img = document.createElement('img');
+        img.src = 'images/m1.png';
+        img.className = 'image-message';
+        msg.appendChild(img);
+      } else {
+        msg.textContent = text;
+      }
+
+      wrapper.appendChild(msg);
+      messages.appendChild(wrapper);
+      messages.scrollTo({ top: messages.scrollHeight, behavior: 'smooth' });
+    }
+
+    function showTypingIndicator() {
+      const wrapper = document.createElement('div');
+      wrapper.className = 'message-wrapper typing-wrapper';
+      wrapper.style.justifyContent = 'flex-start';
+
+      const bubble = document.createElement('div');
+      bubble.className = 'message incoming';
+
+      const typing = document.createElement('div');
+      typing.className = 'typing';
+      typing.innerHTML = '<div class="dot"></div><div class="dot"></div><div class="dot"></div>';
+
+      bubble.appendChild(typing);
+      wrapper.appendChild(bubble);
+      messages.appendChild(wrapper);
+      messages.scrollTo({ top: messages.scrollHeight, behavior: 'smooth' });
+
+      return wrapper;
+    }
+
     function sendMessage() {
       const input = document.getElementById('messageInput');
       const text = input.value.trim();
       if (!text) return;
-
-      const messages = document.getElementById('messages');
-
-      const wrapper = document.createElement('div');
-      wrapper.className = 'message-wrapper';
-
-      const message = document.createElement('div');
-      message.className = 'message';
-      message.textContent = text;
-
-      wrapper.appendChild(message);
-      messages.appendChild(wrapper);
-      input.value = "";
-
-      messages.scrollTo({
-        top: messages.scrollHeight,
-        behavior: 'smooth'
-      });
+      appendMessage(text, true);
+      input.value = '';
     }
+
+    // 자동 대화 시나리오 실행
+    window.onload = () => {
+      appendMessage('지금은 수업 중입니다.', true);
+
+      setTimeout(() => {
+        const typingBubble = showTypingIndicator();
+
+        setTimeout(() => {
+          // Remove typing bubble
+          typingBubble.remove();
+          appendMessage('그렇습니까', false);
+
+          setTimeout(() => {
+            appendMessage('보고싶습니당', false);
+
+            setTimeout(() => {
+              appendMessage('', false, true);
+            }, 1000);
+          }, 1000);
+        }, 1000);
+      }, 2000);
+    };
   </script>
 </body>
 </html>
