--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=390, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>iMessage</title>
   <style>
     * {
@@ -51,8 +51,8 @@
       padding: 10px 14px;
       font-size: 15px;
       max-width: 80%;
-      animation: messageSend 0.3s ease forwards;
       opacity: 0;
+      animation: messageSend 0.3s ease forwards;
       border-top-left-radius: 18px;
       border-top-right-radius: 18px;
       border-bottom-left-radius: 18px;
@@ -62,11 +62,10 @@
     .incoming {
       background-color: #e5e5ea;
       color: black;
-      align-self: flex-start;
       border-top-left-radius: 18px;
       border-top-right-radius: 18px;
-      border-bottom-left-radius: 6px;
       border-bottom-right-radius: 18px;
+      border-bottom-left-radius: 6px;
     }
 
     @keyframes messageSend {
@@ -132,47 +131,27 @@
       display: none;
     }
 
-    /* Typing indicator */
-    .typing {
+    .typing-indicator {
       width: 50px;
-      height: 24px;
+      height: 30px;
+      border-radius: 18px;
+      background-color: #e5e5ea;
       display: flex;
       align-items: center;
-      justify-content: space-around;
-    }
-
-    .dot {
-      width: 6px;
-      height: 6px;
-      background-color: #555;
-      border-radius: 50%;
-      animation: blink 1.4s infinite ease-in-out both;
-    }
-
-    .dot:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-
-    .dot:nth-child(3) {
-      animation-delay: 0.4s;
-    }
-
-    @keyframes blink {
-      0%, 80%, 100% {
-        transform: scale(0.8);
-        opacity: 0.3;
-      }
-      40% {
-        transform: scale(1);
-        opacity: 1;
-      }
+      justify-content: center;
+      font-size: 24px;
+      color: #555;
+      padding: 4px 12px;
+      animation: messageSend 0.3s ease forwards;
     }
 
     .image-message {
-      width: 180px;
-      height: 180px;
+      max-width: 220px;
+      max-height: 180px;
       border-radius: 18px;
       object-fit: cover;
+      display: block;
+      animation: messageSend 0.3s ease forwards;
     }
   </style>
 </head>
@@ -197,39 +176,35 @@
       wrapper.className = 'message-wrapper';
       wrapper.style.justifyContent = isUser ? 'flex-end' : 'flex-start';
 
-      const msg = document.createElement('div');
-      msg.className = 'message';
-      if (!isUser) msg.classList.add('incoming');
-
       if (isImage) {
         const img = document.createElement('img');
         img.src = 'images/m1.png';
         img.className = 'image-message';
-        msg.appendChild(img);
+        wrapper.appendChild(img);
       } else {
+        const msg = document.createElement('div');
+        msg.className = 'message';
+        if (!isUser) msg.classList.add('incoming');
         msg.textContent = text;
+        wrapper.appendChild(msg);
       }
 
-      wrapper.appendChild(msg);
       messages.appendChild(wrapper);
       messages.scrollTo({ top: messages.scrollHeight, behavior: 'smooth' });
     }
 
     function showTypingIndicator() {
       const wrapper = document.createElement('div');
-      wrapper.className = 'message-wrapper typing-wrapper';
+      wrapper.className = 'message-wrapper';
       wrapper.style.justifyContent = 'flex-start';
 
-      const bubble = document.createElement('div');
-      bubble.className = 'message incoming';
-
       const typing = document.createElement('div');
-      typing.className = 'typing';
-      typing.innerHTML = '<div class="dot"></div><div class="dot"></div><div class="dot"></div>';
+      typing.className = 'typing-indicator';
+      typing.textContent = '...';
 
-      bubble.appendChild(typing);
-      wrapper.appendChild(bubble);
+      wrapper.appendChild(typing);
       messages.appendChild(wrapper);
+
       messages.scrollTo({ top: messages.scrollHeight, behavior: 'smooth' });
 
       return wrapper;
@@ -240,26 +215,25 @@
       const text = input.value.trim();
       if (!text) return;
       appendMessage(text, true);
-      input.value = '';
+      input.value = "";
     }
 
-    // 자동 대화 시나리오 실행
+    // 자동 메시지 시퀀스
     window.onload = () => {
-      appendMessage('지금은 수업 중입니다.', true);
+      appendMessage("지금은 수업 중입니다.", true);
 
       setTimeout(() => {
-        const typingBubble = showTypingIndicator();
+        const typingWrapper = showTypingIndicator();
 
         setTimeout(() => {
-          // Remove typing bubble
-          typingBubble.remove();
-          appendMessage('그렇습니까', false);
+          messages.removeChild(typingWrapper);
+          appendMessage("그렇습니까", false);
 
           setTimeout(() => {
-            appendMessage('보고싶습니당', false);
+            appendMessage("보고싶습니당", false);
 
             setTimeout(() => {
-              appendMessage('', false, true);
+              appendMessage("", false, true);
             }, 1000);
           }, 1000);
         }, 1000);
