--- a/facetime.html
+++ b/facetime.html
@@ -131,6 +131,7 @@
     <div class="action-button-row">
       <div class="action-group">
         <img src="images/de.PNG" alt="Decline" />
+        <a href="about.html">
         <div class="end-accept">Decline</div>
       </div>
       <div class="action-group">
