--- a/about.html
+++ b/about.html
@@ -168,10 +168,14 @@
       }
     }
 
-    .image-message {
+      .image-message {
       width: 200px;
       border-radius: 18px;
       object-fit: cover;
+      opacity: 0;
+      animation: messageSend 0.3s ease forwards;
+    }
+
     }
   </style>
 </head>
