--- a/index.html
+++ b/index.html
@@ -69,50 +69,29 @@
       <img src="images/i3.webp" alt="Music" />
     </div>
   </div>
-    <div class="lock-alert" id="lockAlert">
-    <div class="alert-title">iMessage</div>
-    <div class="alert-message">보고싶습니당</div>
+<!-- iMessage-style Notification -->
+<div class="lock-alert" id="lockAlert">
+  <div class="alert-header">
+    <img src="images/i2.webp" alt="Messages Icon" />
+    <span class="header-title">MESSAGES</span>
+    <span class="header-time">now</span>
   </div>
+  <div class="alert-sender">Saraille</div>
+  <div class="alert-message">Oh sugar! Anyone can see this message...</div>
+</div>
 
-  <style>
-    .lock-alert {
-      position: absolute;
-      top: -100px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 350px;
-      background-color: rgba(255, 255, 255, 0.9);
-      border-radius: 18px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      padding: 12px 16px;
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      transition: top 0.4s ease;
-      z-index: 99;
-    }
-
-    .alert-title {
-      font-weight: 600;
-      font-size: 14px;
-      color: #007aff;
-    }
-
-    .alert-message {
-      font-size: 16px;
-      color: #000;
-    }
-  </style>
-
-  <script>
-    window.onload = () => {
-      setTimeout(() => {
-        const alert = document.getElementById('lockAlert');
-        alert.style.top = '32px';
-      }, 2000);
-    };
-  </script>
+<style>
+  .lock-alert {
+    position: absolute;
+    top: -100px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 360px;
+    background: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(16px);
+    -webkit-backdrop-filter: blur(16px);
+    border-radius: 20px;
+    box-shadow: 0 8px 24px
 </body>
 </html>
 
