--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <img src="images/i2.webp" alt="Messages" />
       </a>
       <img src="images/i3.webp" alt="Music" />
+      <a href="applemusic.html">
     </div>
   </div>
 
